<resources>
    <string name="app_name">Wild Life Sim</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="textview">TextView</string>
    <string name="help">Help</string>
    <string name="number_of_canivores">Number of Canivores</string>
    <string name="number_of_frames">Number of Frames</string>
    <string name="number_of_herbivores">Number of Herbivores</string>
    <string name="about">About</string>
    <string name="help_your_self">Help Your Self</string>
    <string name="motto_we_no_dey_carry_last">Motto: We No Dey Carry Last</string>
</resources>
